--- a/NOMAD/Base.lproj/Main.storyboard
+++ b/NOMAD/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="v36-ST-ytu">
-                                <rect key="frame" x="0.0" y="113" width="320" height="390"/>
+                                <rect key="frame" x="0.0" y="114" width="320" height="389"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ITEMDETAILCELLIDENTIFIER" rowHeight="75" id="5as-Rb-Gzr" customClass="ProductTableViewCell">
@@ -48,7 +48,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pbz-iJ-elP">
-                                <rect key="frame" x="0.0" y="-1" width="320" height="114"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -68,32 +68,27 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="ZUw-dI-oJT" kind="modal" modalTransitionStyle="flipHorizontal" id="Edf-TY-kPa"/>
+                                    <segue destination="ZUw-dI-oJT" kind="modal" modalTransitionStyle="crossDissolve" id="Edf-TY-kPa"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NomadHeaderLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="ges-Tg-Pvs">
-                                <rect key="frame" x="95" y="3" width="128" height="128"/>
+                                <rect key="frame" x="93" y="-10" width="134" height="134"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="128" id="sRw-TC-jKl"/>
-                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="mNZ-Sn-V9x" secondAttribute="trailing" id="0UH-q0-PFH"/>
+                            <constraint firstItem="Pbz-iJ-elP" firstAttribute="top" secondItem="9O2-cU-W3e" secondAttribute="top" id="56N-k5-LJw"/>
                             <constraint firstItem="Pbz-iJ-elP" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="CAM-tq-OaV"/>
                             <constraint firstItem="v36-ST-ytu" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="bottom" id="Fd5-st-DOO"/>
-                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" constant="95" id="Fi0-NN-Icf"/>
                             <constraint firstAttribute="trailing" secondItem="v36-ST-ytu" secondAttribute="trailing" id="Iyp-sT-RzH"/>
-                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="top" constant="4" id="Kbd-qT-3Hm"/>
                             <constraint firstItem="mNZ-Sn-V9x" firstAttribute="top" secondItem="v36-ST-ytu" secondAttribute="bottom" id="MEK-xQ-X16"/>
-                            <constraint firstItem="ges-Tg-Pvs" firstAttribute="top" secondItem="9O2-cU-W3e" secondAttribute="top" constant="3" id="TPX-65-uT8"/>
-                            <constraint firstItem="oEy-H1-fcY" firstAttribute="top" secondItem="ges-Tg-Pvs" secondAttribute="bottom" constant="437" id="U9T-2v-7f4"/>
                             <constraint firstAttribute="bottom" secondItem="mNZ-Sn-V9x" secondAttribute="bottom" id="VMy-sO-RLq"/>
                             <constraint firstItem="mNZ-Sn-V9x" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="WIX-pL-ZK3"/>
+                            <constraint firstItem="Pbz-iJ-elP" firstAttribute="centerX" secondItem="ges-Tg-Pvs" secondAttribute="centerX" id="XWN-3n-Mey"/>
+                            <constraint firstItem="Pbz-iJ-elP" firstAttribute="centerY" secondItem="ges-Tg-Pvs" secondAttribute="centerY" id="agb-lQ-q2C"/>
                             <constraint firstAttribute="trailing" secondItem="Pbz-iJ-elP" secondAttribute="trailing" id="dmH-2h-Fk1"/>
-                            <constraint firstItem="v36-ST-ytu" firstAttribute="top" secondItem="Pbz-iJ-elP" secondAttribute="bottom" id="ltp-68-FY9"/>
                             <constraint firstItem="v36-ST-ytu" firstAttribute="leading" secondItem="9O2-cU-W3e" secondAttribute="leading" id="xU5-5u-gES"/>
                         </constraints>
                     </view>
@@ -213,6 +208,116 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2gi-Ld-9IZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="95"/>
+        </scene>
+        <!--Order Details View Controller-->
+        <scene sceneID="NYM-jX-dRd">
+            <objects>
+                <viewController id="RQR-dG-1on" customClass="OrderDetailsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zGV-jN-AwO"/>
+                        <viewControllerLayoutGuide type="bottom" id="wUy-Sc-bVo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Eu2-30-6Ls">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IZU-d7-uPu">
+                                <rect key="frame" x="0.0" y="114" width="320" height="389"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="dlV-KQ-GrE"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ORDERDETAILSTEXTCELLIDENTIFIER" rowHeight="75" id="MtU-Eh-CeY" customClass="OrderDetailsTextTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="75"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MtU-Eh-CeY" id="k4d-T3-KUm">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="95T-6f-988">
+                                                    <rect key="frame" x="14" y="0.0" width="290" height="76"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RZ4-c3-hlW">
+                                                    <rect key="frame" x="20" y="8" width="51" height="58"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </imageView>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Placeholder" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5UO-Wb-EEO">
+                                                    <rect key="frame" x="94" y="22" width="211" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="18"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="_iconImageView" destination="RZ4-c3-hlW" id="Avc-ds-g9E"/>
+                                            <outlet property="_textField" destination="5UO-Wb-EEO" id="Q14-GS-n4R"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="RQR-dG-1on" id="DFc-tv-aBZ"/>
+                                    <outlet property="delegate" destination="RQR-dG-1on" id="KQd-GQ-2sL"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfu-DT-c1Z">
+                                <rect key="frame" x="0.0" y="503" width="320" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="hVd-OZ-Oep"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="o91-HW-hVB"/>
+                                    <constraint firstAttribute="width" constant="320" id="oJu-JK-o5A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="24"/>
+                                <state key="normal" title="GET QUOTE">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bKI-TD-GVW">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.61960784310000006" green="0.0" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="1Or-TA-fQR"/>
+                                    <constraint firstAttribute="height" constant="114" id="J7j-QT-O9o"/>
+                                    <constraint firstAttribute="width" constant="320" id="R61-Ka-7gE"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="114" id="g2X-e1-08h"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NomadHeaderLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Mi6-VU-Lw2">
+                                <rect key="frame" x="93" y="-10" width="134" height="134"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bKI-TD-GVW" firstAttribute="leading" secondItem="Eu2-30-6Ls" secondAttribute="leading" id="7Tq-2A-VBK"/>
+                            <constraint firstAttribute="trailing" secondItem="IZU-d7-uPu" secondAttribute="trailing" id="Bpp-8W-1cK"/>
+                            <constraint firstItem="wUy-Sc-bVo" firstAttribute="top" secondItem="mfu-DT-c1Z" secondAttribute="bottom" id="CXG-mn-1dB"/>
+                            <constraint firstAttribute="trailing" secondItem="bKI-TD-GVW" secondAttribute="trailing" id="GgJ-bR-fqv"/>
+                            <constraint firstAttribute="trailing" secondItem="mfu-DT-c1Z" secondAttribute="trailing" id="PR2-pO-tvs"/>
+                            <constraint firstItem="IZU-d7-uPu" firstAttribute="leading" secondItem="Eu2-30-6Ls" secondAttribute="leading" id="c8D-bD-hYe"/>
+                            <constraint firstItem="mfu-DT-c1Z" firstAttribute="top" secondItem="IZU-d7-uPu" secondAttribute="bottom" id="dxZ-7z-3zP"/>
+                            <constraint firstItem="Mi6-VU-Lw2" firstAttribute="centerX" secondItem="bKI-TD-GVW" secondAttribute="centerX" id="f3k-KE-G6H"/>
+                            <constraint firstItem="bKI-TD-GVW" firstAttribute="top" secondItem="Eu2-30-6Ls" secondAttribute="top" id="kGC-zM-ATl"/>
+                            <constraint firstItem="Mi6-VU-Lw2" firstAttribute="centerY" secondItem="bKI-TD-GVW" secondAttribute="centerY" id="qBA-Me-ShF"/>
+                            <constraint firstItem="IZU-d7-uPu" firstAttribute="top" secondItem="bKI-TD-GVW" secondAttribute="bottom" id="vC5-kZ-eIU"/>
+                            <constraint firstItem="mfu-DT-c1Z" firstAttribute="leading" secondItem="Eu2-30-6Ls" secondAttribute="leading" id="zKT-Eu-P0U"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="KXO-KC-yHs"/>
+                    <connections>
+                        <outlet property="_buttonToBottomConstraint" destination="CXG-mn-1dB" id="RcW-Ko-uns"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CTn-Ja-eB1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1104" y="95"/>
         </scene>
